Fix BookService: collector(Collectors.toList()) -> toList()